# My_Projects

./: LICENSE  README.md
C/Data Structures/Trie/: CMakeLists.txt  main.c
C/Data Structures/Trie/Files/: A.txt  AA_amyloidosis.txt  A_Latin_Dictionary.txt  A_Wild_Sheep_Chase.txt  Aardvark.txt  Aardwolf.txt  Abalone.txt  Abandoned_pets.txt  Abbott's_duiker.txt  Abdomen.txt  Abdopus.txt  Abomasum.txt  Abortion.txt  Abraham.txt  Abrahamic_religions.txt  Abyssal_zone.txt  Abyssinian_cat.txt  Abyssinian_genet.txt  Acacia.txt  Acanthochelys.txt  Acanthodii.txt  Acanthothoraci.txt  Acari.txt  Acariformes.txt  Acceleration.txt  Accipitridae.txt  Acetic_acid.txt  Achaemenid_Empire.txt  Acherontemys.txt  Acinonyx.txt  Acinonyx_kurteni.txt  Acipenseriformes.txt  Acrobatic_cavy.txt  Acta_Palaeontologica_Polonica.txt  Actinistia.txt  Addax.txt  Aders_duiker.txt  Adolf_Hitler.txt  Aegean_cat.txt  Africa.txt  (+59 more)
C/Data Structures/Trie/Header Files/AuxList/: AuxList.c  AuxList.h
C/Data Structures/Trie/Header Files/List/: ListFunctions.c  ListStruct.h
C/Data Structures/Trie/Header Files/RankingList/: RankingFunctions.c  RankingStruct.h
C/Data Structures/Trie/Header Files/Trie/: TrieFunctions.c  TrieStruct.h
C/Data Structures/Trie/Header Files/Utils/: Utils.c  Utils.h
Python/Crossy Road/: car_manager.py
Python/Pandas Library/Squirrel  Tracker/: main.py  squirrel_colors.csv
Python/Pandas Library/US States Game/: main.py  states_to_guess.csv
Python/Pandas Library/Weather App/: main.py  new_data.csv
Python/Snake/: main.py  snake.py
